# vibecc

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  run  tests.sh
.claude/: settings.json
.claude/commands/: commit.md
.github/workflows/: ci.yml
specs/: n1570.md
src/: CMakeLists.txt  codegen.c  codegen.h  gen_asm.c  gen_asm.h  gen_ir.c  gen_ir.h  lexer.c  lexer.h  main.c  map.c  map.h  optimize.c  optimize.h  parser.c  parser.h  util.c  util.h  vector.c  vector.h
tests/: CMakeLists.txt  integration_tests.sh  test_codegen.cpp  test_lexer.cpp  test_parser.cpp
tests/integration/: addition_complex.c  addition_multiplication.c  addition_simple.c  multiplication_complex.c  multiplication_simple.c  tests.sh
tests/unit/: CMakeLists.txt  map_test.cc
